git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@201 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,3 +1,5 @@
+-- Current version
+Included C-version of GeographicLib by C.F.F. Karney. areaPolygon and perimenter are now using that to compute these on a (WGS84) ellipsoid. New function distGeo (distance on an ellipsoid) also uses this.
 
 -- 17 January 2014, version 1.3-8
 Fixed bug in destPointRhumb. Reported by Bart Kranstauber
