git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@216 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -1,5 +1,10 @@
 -- Current version
-Included C-version of GeographicLib by C.F.F. Karney. areaPolygon and perimenter are now using that to compute these on a (WGS84) ellipsoid. New function distGeo (distance on an ellipsoid) also uses this.
+Fixed error in gcMaxLat (reported by William Smith)
+Bug fix in antipodal (reported by Gareth Davies)
+Bug fix in gcIntermediate when crossing the date line
+
+-- 7 July 2015, version 1.4-3
+Included C-version of GeographicLib by C.F.F. Karney. areaPolygon and perimeter are now using that to compute these on a (WGS84) ellipsoid. New function distGeo (distance on an ellipsoid) also uses this.
 
 -- 17 January 2014, version 1.3-8
 Fixed bug in destPointRhumb. Reported by Bart Kranstauber
@@ -14,7 +19,7 @@ Fixed bug in distMeeus. It returned NaN when the distance between two points was
 New function geomean to compute the mean of a set of coordinates (optionally with weights)
 
 -- 28 August 2011, version 1.2-25
-Correction to gcIntermediate. Points were not exactely equidistant. Error spotted by Jason Davies.
+Correction to gcIntermediate. Points were not exactly equidistant. Error spotted by Jason Davies.
 
 -- 18 May 2011, version 1.2-21
 Normalizing longitude to -180..180 in midPoint. Suggested by Aaron Hardin
