git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@229 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/vignettes/geosphere.Rnw
+++ b/pkg/geosphere/vignettes/geosphere.Rnw
@@ -57,11 +57,11 @@ Below the differences between the three spherical methods are illustrated. At ve
 
 <<fig=TRUE , echo=TRUE>>=
 library(geosphere)
-Lon = c(1:9/1000, 1:9/100, 1:9/10, 1:90*2) 
-Lat = c(1:9/1000, 1:9/100, 1:9/10, 1:90) 
-dcos = distCosine(c(0,0), cbind(Lon, Lat))
-dhav = distHaversine(c(0,0), cbind(Lon, Lat))
-dvsp = distVincentySphere(c(0,0), cbind(Lon, Lat))
+Lon <- c(1:9/1000, 1:9/100, 1:9/10, 1:90*2) 
+Lat <- c(1:9/1000, 1:9/100, 1:9/10, 1:90) 
+dcos <- distCosine(c(0,0), cbind(Lon, Lat))
+dhav <- distHaversine(c(0,0), cbind(Lon, Lat))
+dvsp <- distVincentySphere(c(0,0), cbind(Lon, Lat))
 par(mfrow=(c(1,2)))
 plot(log(dcos), dcos-dhav, col='red', ylim=c(-1e-05, 1e-05), 
             xlab="Log 'Law of Cosines' distance (m)", 
@@ -74,7 +74,7 @@ plot(log(dhav), dhav-dvsp, col='blue',
 The difference with the 'Vincenty Ellipsoid' method is more pronounced. In the example below (using the default WGS83 ellipsoid), the difference is about 0.3% at very small distances, and 0.15% at larger distances.
 
 <<fig=TRUE , echo=TRUE>>=
-dvse = distVincentyEllipsoid(c(0,0), cbind(Lon, Lat))
+dvse <- distVincentyEllipsoid(c(0,0), cbind(Lon, Lat))
 plot(dvsp/1000, (dvsp-dvse)/1000, col='blue', xlab='Vincenty Sphere Distance (km)', 
         ylab="Difference between 'Vincenty Sphere' and 'Vincenty Ellipsoid' methods (km)")
 @
