--- a/pkg/geosphere/ChangeLog
+++ b/pkg/geosphere/ChangeLog
@@ -2,6 +2,7 @@
 -- Current version
 distHaversine bugged in some cases for antipodes: https://stackoverflow.com/questions/45889616/why-does-disthaversine-return-nan-for-some-pairs-of-coordinates#
 dist2gc always returned a positive value (the manual said it should be negative if it was at the left of the circle); in contrast with what the manual stated. Getting the sign is now an option.
+dist2gc used the bearing for an ellipsoid, not for a spheroid. Reported by Greg Whittier
 
 -- 15 June 2016, version 1.5-5
 Fixed error in gcMaxLat (reported by William Smith)
